:fire: break the dependency on pyecharts

--- a/echarts-countries-pypkg.yml
+++ b/echarts-countries-pypkg.yml
@@ -3,10 +3,11 @@ organisation: "pyecharts"
 author: "C.W."
 contact: "wangc_2011@hotmail.com"
 company: "pyecharts dev team"
-version: "0.0.3"
-current_version: "0.0.3"
+version: "0.0.4"
+current_version: "0.0.4"
 release: "0.0.3"
 copyright_year: 2018
 license: MIT
-dependencies: []
+dependencies:
+  - lml == 0.0.2
 description: "pyecharts map extensions - world countries - python package"
