--- a/.moban.yml
+++ b/.moban.yml
@@ -13,3 +13,6 @@ targets:
   - "echarts_countries_pypkg/_version.py": "_version.py.jj2"
   - .gitignore: gitignore.jj2
   - .travis.yml: travis.yml.jj2
+  - output: CHANGELOG.rst
+    configuration: changelog.yml
+    template: CHANGELOG.rst.jj2
