--- a/.moban.yml
+++ b/.moban.yml
@@ -1,6 +1,10 @@
+requires:
+  - type: git
+    url: https://github.com/moremoban/pypi-mobans
+    submodule: true
 configuration:
   template_dir:
-  - "mobans/templates"
+  - "pypi-mobans:templates"
   - ".moban.d"
   configuration: echarts-countries-pypkg.yml
 targets:
