--- a/echarts-countries-pypkg.yml
+++ b/echarts-countries-pypkg.yml
@@ -3,13 +3,13 @@ organisation: "pyecharts"
 author: "C.W."
 contact: "wangc_2011@hotmail.com"
 company: "pyecharts dev team"
-version: "0.1.4"
-current_version: "0.1.4"
-release: "0.1.4"
+version: "0.1.5"
+current_version: "0.1.5"
+release: "0.1.5"
 copyright_year: 2018
 license: MIT
 nowheel: true
 dependencies:
-  - lml==0.0.2
+  - lml>=0.0.6
   - pyecharts-jupyter-installer==0.0.3
 description: "pyecharts map extensions - world countries - python package"
